tests/mismatched-types.stderr
error: mismatched types
  ┌─ test:1:1
  │
1 │ 42 :: Text
  │ ^^    ---- expected because the type was annotated here
  │ │      
  │ expected `Text`, but found `Number`
  │
  = for more information, see https://wipple.dev/playground/?lesson=errors/mismatched-types

